# cpp-library-template

./: CMakeLists.txt
include/: lib.h
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  appinfo.h  lib.cpp  lib.h
test/: CMakeLists.txt  gtest_main.cc
